--- a/.github/workflow/sample.yml
+++ b/.github/workflow/sample.yml
@@ -1,4 +1,5 @@
 name: Sample Workflow
+run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 
 on:
   push:
@@ -9,8 +10,22 @@ on:
       - master
 
 jobs:
-  push-job:
-    name: Push job
+  # push-job:
+  #   name: Push job
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: '18'
+  #     - name: Install dependencies
+  #       run: npm install
+  #     - name: Build
+  #       run: npm run build
+  pull-request-job:
+    name: Pull request job
+    # needs: push-job
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -20,3 +35,5 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+      - name: Run tests
+        run: npm run test
