fix: removes unvalid command with if npm

--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -47,7 +47,7 @@ jobs:
           node-version: '18'
       - name: Run tests
         run: npm run test
-        if: 'npm run test'
+        # if: 'npm run test'
 
 
 
