--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -37,9 +37,9 @@ jobs:
       - name: Install dependencies
         id: install_dependencies
         run: npm install
-        - name: Pass or fail
-        run: |
-          if [[ ${{ steps.install_dependencies.conclusion }} == success ]]; then exit 0; else exit 1; fi
+      # - name: Pass or fail
+      #   run: |
+      #     if [[ ${{ steps.install_dependencies.conclusion }} == success ]]; then exit 0; else exit 1; fi
       - name: Build
         run: npm run build
   # tests:
