feat: adds if failure in step after install dependencies

--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -37,6 +37,9 @@ jobs:
           node-version: '18'
       - name: Install dependencies
         run: npm install
+      - name: Install dependencies failure
+        run: echo 'Install dependencies step failed'
+        if: failure()
       - name: Build
         run: npm run build
         if: success()
