feat: adds artifacts for installed dependencies

--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -25,6 +25,13 @@ jobs:
           node-version: '18'
       - name: Install dependencies
         run: npm install
+      # next we are using artifacts but this is costly and we don't usually use it for dependencies
+      - name: Upload Artifacts 
+        uses: actions/upload-artifact@v3
+        with:
+          name: installed-dependencies
+          path: /installed-dependencies
+          retention-days: 1
   build:
     name: Build
     if: success()
@@ -35,11 +42,16 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18'
-      - name: Install dependencies
-        run: npm install
-      - name: Install dependencies failure
-        run: echo 'Install dependencies step failed'
-        if: failure()
+      # - name: Install dependencies
+      #   run: npm install
+      # - name: Install dependencies failure
+      #   run: echo 'Install dependencies step failed'
+      #   if: failure()
+      ## using artifacts download from previous step for learning purposes
+      - name: Download dependencies from Install dependencies job
+        uses: actions/download-artifact@v3
+        with:
+          name: installed-dependencies
       - name: Build
         run: npm run build
         if: success()
