adds final download artifacts path and new step

--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -52,6 +52,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: installed-dependencies
+        path: .
+      - name: List of directories
+        run: ls -la
       - name: Build
         run: npm run build
         if: success()
