path is not valid - removing

--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: installed-dependencies
-        path: .
+        # path: .
       - name: List of directories
         run: ls -la
       - name: Build
